--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="product">
         <img src="https://i.ibb.co/nsyqZ5c/IMG-20240727-140600.jpg" alt="Althar Product">
         <div class="product-name">Althar 1</div>
-        <a href="https://wa.me/91XXXXXXXXXX?text=I'm%20interested%20in%20Althar%201" class="whatsapp-btn">WhatsApp</a>
+        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Althar%201" class="whatsapp-btn">WhatsApp</a>
       </div>
       <!-- Add more Althar products here -->
     </div>
@@ -154,7 +154,7 @@
       <div class="product">
         <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="Statue Product">
         <div class="product-name">Statue 1</div>
-        <a href="https://wa.me/91XXXXXXXXXX?text=I'm%20interested%20in%20Statue%201" class="whatsapp-btn">WhatsApp</a>
+        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Statue%201" class="whatsapp-btn">WhatsApp</a>
       </div>
     </div>
   </div>
@@ -165,7 +165,7 @@
       <div class="product">
         <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Photo Frame">
         <div class="product-name">Photo Frame 1</div>
-        <a href="https://wa.me/91XXXXXXXXXX?text=I'm%20interested%20in%20Photo%20Frame%201" class="whatsapp-btn">WhatsApp</a>
+        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Photo%20Frame%201" class="whatsapp-btn">WhatsApp</a>
       </div>
     </div>
   </div>
@@ -176,7 +176,7 @@
       <div class="product">
         <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="Flower Vase">
         <div class="product-name">Flower Vase 1</div>
-        <a href="https://wa.me/91XXXXXXXXXX?text=I'm%20interested%20in%20Flower%20Vase%201" class="whatsapp-btn">WhatsApp</a>
+        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Flower%20Vase%201" class="whatsapp-btn">WhatsApp</a>
       </div>
     </div>
   </div>
