--- a/index.html
+++ b/index.html
@@ -1,190 +1,191 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Di Adore - Christian Devotional Store</title>
+  <title>Di Adore Products</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f5f5f5;
-      color: #333;
-    }
-
-    header {
-      background-color: #6a1b9a;
-      color: white;
-      padding: 20px;
+      padding: 0;
       text-align: center;
     }
 
-    nav {
-      background-color: #4a148c;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
+    h2 {
+      margin-top: 20px;
+      color: #444;
     }
 
-    nav a {
-      color: white;
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: bold;
+    .category {
+      margin: 20px 0;
     }
 
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .welcome {
-      text-align: center;
-      padding: 40px 20px;
-      background-color: #ede7f6;
-    }
-
-    .welcome h2 {
-      margin-bottom: 10px;
-      font-size: 28px;
-    }
-
-    .categories {
-      padding: 40px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .category-section {
-      margin-bottom: 50px;
-    }
-
-    .category-title {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #6a1b9a;
-      border-bottom: 2px solid #ccc;
+    .product-card {
       display: inline-block;
-    }
-
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 20px;
-    }
-
-    .product {
-      background-color: white;
-      border-radius: 10px;
+      margin: 15px;
+      background: white;
       padding: 10px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      width: 160px;
       transition: transform 0.3s;
+      cursor: pointer;
     }
 
-    .product:hover {
+    .product-card:hover {
       transform: scale(1.05);
     }
 
-    .product img {
+    .product-card img {
       width: 100%;
-      height: 180px;
-      object-fit: cover;
+      height: auto;
       border-radius: 10px;
     }
 
-    .product-name {
-      margin-top: 10px;
+    .product-card p {
+      margin: 8px 0;
       font-weight: bold;
     }
 
-    .whatsapp-btn {
+    .whatsapp-link {
       display: inline-block;
-      background-color: #25d366;
+      margin-top: 5px;
+      background-color: #25D366;
       color: white;
-      padding: 10px 20px;
-      margin-top: 10px;
+      padding: 6px 10px;
+      border-radius: 6px;
       text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
+      font-size: 14px;
     }
 
-    footer {
-      background-color: #4a148c;
-      color: white;
-      text-align: center;
+    /* Popup */
+    .popup {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.6);
+    }
+
+    .popup-content {
+      background: white;
+      margin: 10% auto;
       padding: 20px;
-      margin-top: 50px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 15px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      text-align: center;
+    }
+
+    .close-btn {
+      color: red;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Welcome to Di Adore</h1>
-  <p>Your Christian Devotional Store</p>
-</header>
+  <h2>Welcome to Di Adore</h2>
+  <p>Explore our beautiful Christian devotional collections</p>
 
-<nav>
-  <a href="#althar">Althar</a>
-  <a href="#statue">Statue</a>
-  <a href="#photo">Photo Frame</a>
-  <a href="#flower">Flower Vase</a>
-</nav>
-
-<div class="welcome">
-  <h2>Bring Faith to Every Corner of Your Home</h2>
-  <p>Explore our devotional products – handpicked for spiritual elegance.</p>
-</div>
-
-<div class="categories">
-  <div class="category-section" id="althar">
-    <h3 class="category-title">Althar</h3>
-    <div class="product-grid">
-      <div class="product">
-        <img src="https://i.ibb.co/nsyqZ5c/IMG-20240727-140600.jpg" alt="Althar Product">
-        <div class="product-name">Althar 1</div>
-        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Althar%201" class="whatsapp-btn">WhatsApp</a>
-      </div>
-      <!-- Add more Althar products here -->
+  <!-- Althar -->
+  <div class="category">
+    <h3>Althar</h3>
+    <div class="product-card" onclick="openPopup('altharPopup')">
+      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Altar Cross">
+      <p>Altar Cross</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Altar%20Cross" target="_blank">Enquire</a>
     </div>
   </div>
 
-  <div class="category-section" id="statue">
-    <h3 class="category-title">Statue</h3>
-    <div class="product-grid">
-      <div class="product">
-        <img src="https://img.eselt.de/img/18223204_EQs0O7JGqRfHYkwp/ad.jpg" alt="Statue Product">
-        <div class="product-name">Statue 1</div>
-        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Statue%201" class="whatsapp-btn">WhatsApp</a>
-      </div>
+  <!-- Statue -->
+  <div class="category">
+    <h3>Statue</h3>
+    <div class="product-card" onclick="openPopup('statuePopup')">
+      <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Jesus Statue">
+      <p>Jesus Statue</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Jesus%20Statue" target="_blank">Enquire</a>
     </div>
   </div>
 
-  <div class="category-section" id="photo">
-    <h3 class="category-title">Photo Frame</h3>
-    <div class="product-grid">
-      <div class="product">
-        <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Photo Frame">
-        <div class="product-name">Photo Frame 1</div>
-        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Photo%20Frame%201" class="whatsapp-btn">WhatsApp</a>
-      </div>
+  <!-- Photo Frame -->
+  <div class="category">
+    <h3>Photo Frame</h3>
+    <div class="product-card" onclick="openPopup('photoPopup')">
+      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" alt="Divine Photo Frame">
+      <p>Divine Photo Frame</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Divine%20Photo%20Frame" target="_blank">Enquire</a>
     </div>
   </div>
 
-  <div class="category-section" id="flower">
-    <h3 class="category-title">Flower Vase</h3>
-    <div class="product-grid">
-      <div class="product">
-        <img src="https://img.eselt.de/img/18223207_M7QyQz1gHVluHFCo/ad.jpg" alt="Flower Vase">
-        <div class="product-name">Flower Vase 1</div>
-        <a href="https://wa.me/919074086052?text=I'm%20interested%20in%20Flower%20Vase%201" class="whatsapp-btn">WhatsApp</a>
-      </div>
+  <!-- Flower Vase -->
+  <div class="category">
+    <h3>Flower Vase</h3>
+    <div class="product-card" onclick="openPopup('vasePopup')">
+      <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="Decorative Vase">
+      <p>Decorative Vase</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Decorative%20Vase" target="_blank">Enquire</a>
     </div>
   </div>
-</div>
 
-<footer>
-  <p>© 2025 Di Adore. All rights reserved.</p>
-</footer>
+  <!-- POPUPS -->
+
+  <div id="altharPopup" class="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup('altharPopup')">&times;</span>
+      <h3>Altar Cross</h3>
+      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" style="width:100%; border-radius:10px;">
+      <p>A beautifully crafted Altar Cross made of wood and metal. Ideal for home altar.</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Altar%20Cross" target="_blank">Enquire on WhatsApp</a>
+    </div>
+  </div>
+
+  <div id="statuePopup" class="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup('statuePopup')">&times;</span>
+      <h3>Jesus Statue</h3>
+      <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" style="width:100%; border-radius:10px;">
+      <p>Graceful Jesus statue made of resin, perfect for prayer corners and gifts.</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Jesus%20Statue" target="_blank">Enquire on WhatsApp</a>
+    </div>
+  </div>
+
+  <div id="photoPopup" class="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup('photoPopup')">&times;</span>
+      <h3>Divine Photo Frame</h3>
+      <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" style="width:100%; border-radius:10px;">
+      <p>Beautifully framed image of Jesus Christ with antique golden design border.</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Divine%20Photo%20Frame" target="_blank">Enquire on WhatsApp</a>
+    </div>
+  </div>
+
+  <div id="vasePopup" class="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup('vasePopup')">&times;</span>
+      <h3>Decorative Vase</h3>
+      <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" style="width:100%; border-radius:10px;">
+      <p>Elegant flower vase with floral carvings. Adds grace to prayer spaces and homes.</p>
+      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Decorative%20Vase" target="_blank">Enquire on WhatsApp</a>
+    </div>
+  </div>
+
+  <!-- JavaScript -->
+  <script>
+    function openPopup(id) {
+      document.getElementById(id).style.display = "block";
+    }
+    function closePopup(id) {
+      document.getElementById(id).style.display = "none";
+    }
+  </script>
 
 </body>
 </html>
