--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
 </head>
 <body>
 
-  <h2>Welcome to Di Adore</h2>
+  <h2>Welcome to Di'Adore</h2>
   <p>Explore our beautiful Christian devotional collections</p>
 
   <!-- Althar -->
   <div class="category">
     <h3>Althar</h3>
     <div class="product-card" onclick="openPopup('altharPopup')">
-      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Altar Cross">
-      <p>Altar Cross</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Altar%20Cross" target="_blank">Enquire</a>
+      <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" alt="Altar">
+      <p>Altar</p>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Altar%20Cross" target="_blank">Enquire</a>
     </div>
   </div>
 
@@ -111,7 +111,7 @@
     <div class="product-card" onclick="openPopup('statuePopup')">
       <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" alt="Jesus Statue">
       <p>Jesus Statue</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Jesus%20Statue" target="_blank">Enquire</a>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Jesus%20Statue" target="_blank">Enquire</a>
     </div>
   </div>
 
@@ -131,7 +131,7 @@
     <div class="product-card" onclick="openPopup('vasePopup')">
       <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" alt="Decorative Vase">
       <p>Decorative Vase</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Decorative%20Vase" target="_blank">Enquire</a>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Decorative%20Vase" target="_blank">Enquire</a>
     </div>
   </div>
 
@@ -143,7 +143,7 @@
       <h3>Altar Cross</h3>
       <img src="https://img.eselt.de/img/18223205_Aj1KT93eDSYpE3pG/ad.jpg" style="width:100%; border-radius:10px;">
       <p>A beautifully crafted Altar Cross made of wood and metal. Ideal for home altar.</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Altar%20Cross" target="_blank">Enquire on WhatsApp</a>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Altar%20Cross" target="_blank">Enquire on WhatsApp</a>
     </div>
   </div>
 
@@ -153,7 +153,7 @@
       <h3>Jesus Statue</h3>
       <img src="https://img.eselt.de/img/18223206_vNihDVgKAk4DVkXs/ad.jpg" style="width:100%; border-radius:10px;">
       <p>Graceful Jesus statue made of resin, perfect for prayer corners and gifts.</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Jesus%20Statue" target="_blank">Enquire on WhatsApp</a>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Jesus%20Statue" target="_blank">Enquire on WhatsApp</a>
     </div>
   </div>
 
@@ -163,7 +163,7 @@
       <h3>Divine Photo Frame</h3>
       <img src="https://img.eselt.de/img/18223216_vHtgX1UXBY5UEGoD/ad.jpg" style="width:100%; border-radius:10px;">
       <p>Beautifully framed image of Jesus Christ with antique golden design border.</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Divine%20Photo%20Frame" target="_blank">Enquire on WhatsApp</a>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Divine%20Photo%20Frame" target="_blank">Enquire on WhatsApp</a>
     </div>
   </div>
 
@@ -173,7 +173,7 @@
       <h3>Decorative Vase</h3>
       <img src="https://img.eselt.de/img/18223224_7np34myHvUV5pbay/ad.jpg" style="width:100%; border-radius:10px;">
       <p>Elegant flower vase with floral carvings. Adds grace to prayer spaces and homes.</p>
-      <a class="whatsapp-link" href="https://wa.me/919876543210?text=I'm%20interested%20in%20the%20Decorative%20Vase" target="_blank">Enquire on WhatsApp</a>
+      <a class="whatsapp-link" href="https://wa.me/919074086052?text=I'm%20interested%20in%20the%20Decorative%20Vase" target="_blank">Enquire on WhatsApp</a>
     </div>
   </div>
 
