--- a/index.html
+++ b/index.html
@@ -1,137 +1,110 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Di Adore - Christian Devotional Store</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Di Adore - Altar Collection</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f0f4f8;
-      color: #333;
+      padding: 0;
+      background-color: #f8f8f8;
+      text-align: center;
     }
-
-    header {
-      background-color: #4A148C;
+    h1 {
+      background-color: #663399;
       color: white;
       padding: 1rem;
-      text-align: center;
+      margin: 0;
     }
-
-    .welcome {
-      padding: 2rem;
-      text-align: center;
-      background-color: #ede7f6;
-    }
-
-    .categories {
+    .container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      padding: 2rem;
+      padding: 20px;
     }
-
     .product {
       background: white;
       border-radius: 12px;
+      padding: 15px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      width: 200px;
-      text-align: center;
+      width: 250px;
       transition: transform 0.3s;
     }
-
     .product:hover {
       transform: scale(1.05);
     }
-
     .product img {
       width: 100%;
-      height: auto;
+      border-radius: 8px;
     }
-
-    .product-name {
-      padding: 0.5rem;
-      font-weight: bold;
+    .product h3 {
+      margin: 10px 0 5px;
     }
-
     .product button {
-      background-color: #4A148C;
+      background-color: #25D366;
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
-      margin-bottom: 1rem;
-      border-radius: 5px;
+      padding: 10px 15px;
+      border-radius: 6px;
       cursor: pointer;
+      font-size: 1rem;
     }
-
-    footer {
-      background-color: #4A148C;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
+    .product button:hover {
+      background-color: #128C7E;
     }
-
     @media (max-width: 600px) {
-      .categories {
+      .container {
         flex-direction: column;
         align-items: center;
       }
     }
   </style>
 </head>
-
 <body>
-  <header>
-    <h1>Welcome to Di Adore</h1>
-    <p>Christian Devotional Articles</p>
-  </header>
-
-  <div class="welcome">
-    <h2>Bring Devotion to Your Home</h2>
-    <p>Explore our exclusive handcrafted collections.</p>
+  <h1>Welcome to Di Adore – Altar Collection</h1>
+  <div class="container">
+    <div class="product">
+      <img src="https://i.ibb.co/S7t6PxvS/IMG-20250728-WA0012.jpg" alt="Altar 1" />
+      <h3>Altar Model 1</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%201','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/WvZKPPzB/De-Watermark-ai-1753717161822.jpg" alt="Altar 2" />
+      <h3>Altar Model 2</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%202','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/d0jmCcfJ/De-Watermark-ai-1753717303502.jpg" alt="Altar 3" />
+      <h3>Altar Model 3</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%203','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/wFRTDVqS/wmremove-transformed.jpg" alt="Altar 4" />
+      <h3>Altar Model 4</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%204','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/zV9Vxs0g/De-Watermark-ai-1753718901322.jpg" alt="Altar 5" />
+      <h3>Altar Model 5</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%205','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/JjCyb3KW/1000089983-jpg.jpg" alt="Altar 6" />
+      <h3>Altar Model 6</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%206','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/1GMg9L3P/1000090023-webp.jpg" alt="Altar 7" />
+      <h3>Altar Model 7</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%207','_blank')">Enquire</button>
+    </div>
+    <div class="product">
+      <img src="https://i.ibb.co/S7t6PxvS/IMG-20250728-WA0012.jpg" alt="Altar 8" />
+      <h3>Altar Model 8</h3>
+      <button onclick="window.open('https://wa.me/919000000000?text=I%20am%20interested%20in%20Altar%20Model%208','_blank')">Enquire</button>
+    </div>
   </div>
-
-  <section class="categories">
-    <!-- Altar Category -->
-    <div class="product">
-      <img src="https://i.ibb.co/Mx7v50x/IMG-20240727-140600.jpg" alt="Altar Product 1">
-      <div class="product-name">Altar Product 1</div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20am%20interested%20in%20Altar%20Product%201"><button>Contact on WhatsApp</button></a>
-    </div>
-
-    <div class="product">
-      <img src="https://i.ibb.co/JjkvNmf/IMG-20240727-140653.jpg" alt="Altar Product 2">
-      <div class="product-name">Altar Product 2</div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20am%20interested%20in%20Altar%20Product%202"><button>Contact on WhatsApp</button></a>
-    </div>
-
-    <div class="product">
-      <img src="https://i.ibb.co/qLhxW8r/IMG-20240727-140707.jpg" alt="Altar Product 3">
-      <div class="product-name">Altar Product 3</div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20am%20interested%20in%20Altar%20Product%203"><button>Contact on WhatsApp</button></a>
-    </div>
-
-    <div class="product">
-      <img src="https://i.ibb.co/GQXygky/IMG-20240727-140723.jpg" alt="Altar Product 4">
-      <div class="product-name">Altar Product 4</div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20am%20interested%20in%20Altar%20Product%204"><button>Contact on WhatsApp</button></a>
-    </div>
-
-    <div class="product">
-      <img src="https://i.ibb.co/ZRrtXHf/IMG-20240727-140739.jpg" alt="Altar Product 5">
-      <div class="product-name">Altar Product 5</div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=I%20am%20interested%20in%20Altar%20Product%205"><button>Contact on WhatsApp</button></a>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Di Adore | All Rights Reserved
-  </footer>
 </body>
-
 </html>
